--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -18,3 +18,4 @@ jobs:
           username: ezyro_40942532
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: /htdocs/
+          local-dir: ./public
