--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Test Workflow
+name: 🚀 Deploy website on push
 
 on:
   push:
@@ -6,7 +6,17 @@ on:
       - main
 
 jobs:
-  test:
+  web-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo "GitHub Actions funcionando"
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v4
+
+      - name: 📂 Sync files via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.6
+        with:
+          server: ftpupload.net
+          username: ezyro_40942532
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /htdocs/
